# realtime-media-switch

./: .gitignore  README.md
interface/: callflow.md  rtms.cum  typical_meta.md
switch/: CMakeLists.txt  CMakePresets.json
switch/cmake/: rtms_ast_to_py.py
switch/configuration/: config.cfg  identities.csv
switch/e2e_test_py/: _e2e_last.txt  _e2e_run.txt  client.py  ffmpeg_pipe_e2e.sh  gst_receiver_overlay.py  gst_sender_overlay.py  rtms_protocol.py
switch/e2e_test_py_check_flow/: consumer.py  producer.py
switch/src/: main.cpp
switch/src/core/: identity_manager.cpp  identity_manager.hpp  rtms_switch.cpp  rtms_switch.hpp  session_manager.cpp  session_manager.hpp  transport_context.hpp
switch/src/protocol/: rtms.hpp
switch/src/transport/: transport_tx_enqueue.cpp  transport_tx_enqueue.hpp  transport_types.hpp  udp_transport.cpp  udp_transport.hpp
switch/src/transports/: udp4_transport.cpp  udp4_transport.hpp
switch/src/utils/: hcsv.cpp  hcsv.hpp  hmac_sha256.cpp  hmac_sha256.hpp  logger.hpp  rtms_session.cpp  rtms_session.hpp  string_utils.hpp  transport_endpoint.cpp  transport_endpoint.hpp  transport_tx_enqueue.cpp  transport_tx_enqueue.hpp  types.hpp
web_sample/: app.mjs  design.md  loopbackh264.html  regen_rtms_js.sh  server.py  webapp.html
web_sample/js/: rtms_protocol.mjs
web_sample/scripts/: cum_ast_to_js.py
web_sample_v2/: AudioCodec.js  RTMSClient.js  Untitled  VideoCodec.js  app.mjs  h264_helper.mjs  index.html  server.py  specs.md
web_sample_v2/js/: rtms_protocol.mjs
web_sample_v2/tests/: framing.test.mjs
